# tro-utils

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
docs/: Makefile  authors.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  make.bat  readme.md  requirements.txt  usage.md  usage.rst
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_extra_context.py  test_models_artifact_arrangement.py  test_models_artifact_composition.py  test_models_artifact_location.py  test_models_composition_fingerprint.py  test_models_hash_value.py  test_models_performance.py  test_models_research_artifact.py  test_models_transparent_research_object.py  test_models_trs.py  test_models_tsa.py  test_replication_package_model.py  test_replication_package_verification.py  test_tro_arrangements.py  test_tro_creation.py  test_tro_hashing.py  test_tro_performances.py  test_tro_reporting.py  test_tro_save_load.py  test_tro_signing.py  test_tro_timestamping.py  test_tro_utility_methods.py  test_tro_utils.py  test_tro_workflow.py  test_version.py
tro_utils/: __init__.py  cli.py  default.jinja2  replication_package.py  tro_utils.py
tro_utils/models/: __init__.py  _base.py  arrangement.py  artifact.py  attribute.py  composition.py  hash_value.py  performance.py  tro.py  trs.py  tsa.py
