[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tro-utils"
authors = [
  {name = "Kacper Kowalik", email = "xarthisius.kk@gmail.com"},
  {name = "Craig Willis", email = "willis8@illinois.edu"},
]
maintainers = [
  {name = "Kacper Kowalik", email = "xarthisius.kk@gmail.com"},
]
description = "Utilities for creating, editing and interacting with TROs"
readme = "README.rst"
version = "0.1.2"
dependencies = [
  "Click>=7.0",
  "jinja2",
  "requests",
  "python-gnupg",
  "python-magic",
  "rfc3161ng",
  "graphviz",
]
requires-python = ">= 3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
tro-utils = "tro_utils.cli:cli"

[dependency-groups]
test = ["pytest", "coverage", "pytest-cov"]
