[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tro-utils"
authors = [
  {name = "Kacper Kowalik", email = "xarthisius.kk@gmail.com"},
  {name = "Craig Willis", email = "willis8@illinois.edu"},
]
maintainers = [
  {name = "Kacper Kowalik", email = "xarthisius.kk@gmail.com"},
]
description = "Utilities for creating, editing and interacting with TROs"
readme = "README.rst"
version = "0.2.0"
dependencies = [
  "Click>=7.0",
  "jinja2",
  "requests",
  "python-gnupg",
  "python-magic",
  "rfc3161ng",
  "graphviz",
  "rich",
]
requires-python = ">= 3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
tro-utils = "tro_utils.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=6.2.4",
    "pytest-cov>=7.0.0",
    "coverage>=7.0",
]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=7.0.0",
    "coverage>=7.0",
    "bump2version>=0.5.11",
    "wheel>=0.33.6",
    "watchdog>=0.9.0",
    "flake8>=3.7.8",
    "tox>=3.14.0",
    "Sphinx>=1.8.5",
    "twine>=1.14.0",
]

[tool.setuptools.package-data]
tro_utils = ["*.jinja2"]
